compiler/tools/fpp-check/test/component_instance_def/conflicting_ids.ref.txt
fpp-check
error: max ID 256 for instance c1 conflicts with base ID 256 for instance c2
c1 is defined here
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/conflicting_ids.fpp: 12.1
instance c1: C base id 0x100
^
c2 is defined here
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/conflicting_ids.fpp: 13.1
instance c2: C base id 0x100
^
